--- a/integrations/scraping-cuenca-mino-sil/package.json
+++ b/integrations/scraping-cuenca-mino-sil/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./dist/index.js"
   },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "start": "tsx --watch src/console-runner.ts",
     "build": "run-p clean type-check build:scraping-cuenca-mino-sil",
